ISPN-15651 HR Rolling Upgrades fail with ___protobuf_metadata cache